--- a/Readme
+++ b/Readme
@@ -1,13 +1,21 @@
+# Targeted_RNAseq_Heatmap
+This shiny app lets you create and download a normalized heatmap by uploading RNAseq count X sample matrix.
+The app is specific to targeted gene panels which uses housekeeping genes for normalization. 
+Displayed heatmap can be downloaded as PDF.
+
+Link to app: https://svnallan.shinyapps.io/shiny/
+
+
 The input file should be in .XLSX format.
 
-Gene Annotations:
+# Gene Annotations:
   Columns 1, 2 & 3 are for Gene annotations for all input files. 
     Column:1 - Amplicon ID (change column name to “AmpliconID”)
     Column:2 - Gene Symbol (change column name to “Gene”)
     Column:3 - Change this column name to “Function” for housekeeping normalization and the input text format for housekeeping genes should be “Housekeeping”. The third column shouldn’t be empty. At least mention the housekeeping genes and rest as “Unknown”.
     Second row for the first three columns should always be N/A.
 
-Sample annotations:
+# Sample annotations:
   Rows 3, 4 are for sample annotations (only 2 rows are allowed).
     Rows:3 & 4 for Columns: 1, 2 should be N/A. Rows:3 & 4 for Column:3 should be annotation names e.g “GradeGroup”, “Patient.No”.
     Text input for sample annotations cannot include spaces, can take symbols. N/A if unknown.
